--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
     <head>
 
-        <title>Font-Art Damian Pisarski</title>
+        <title>Font-Art Damian Pisarski realizacje</title>
         <meta charset="UTF-8">
 
         <meta name="keywords" content="">
@@ -25,11 +25,11 @@
                 
                 <div class="container">
                     <a class="nav-brand" href="./index.html">
-                        Font-Art Damian Pisarski
+                        <img src="./images/logo.png" alt="logo" class="d-inline-block align-top">
                     </a>
 
                     <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="nav navbar-nav">                 
+                        <ul class="nav navbar-nav mr-auto">                 
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html">HOME</a>
                             </li>
@@ -49,38 +49,7 @@
             </nav>
         </header>
 
-
-        <div id="home">
-
-            <section class="container-fluid p-0">
-                <img src="./images/background.jpg" alt="rezba" class="img-fluid">             
-            </section>
-
-            <section id="oferta" >
-                <div class="container py-5">
-                    <div class="row">
-                        <p>
-                            Lorem ipsum dolor sit amet, id mazim accumsan sea, pri elaboraret ullamcorper ex, stet utinam mel et. Te alii iisque nec, ea adolescens sadipscing has. Lorem choro tation has eu, virtute patrioque in pri. Detracto omittantur te sed, sed cu lorem assum tibique, at facer falli timeam qui. Gubergren consetetur id ius, tempor voluptatum ad pri. Timeam singulis salutandi mei cu, eu purto blandit voluptatibus has.
-                        </p>
-                    </div>
-                    <div class="row bg-dark text-light justify-content-center">
-                        <h3 class="col-10 text-center py-3">Oferta</h3>                        
-                    </div>
-                    <div class="row bg-dark text-light justify-content-center">
-                        <div class="col-5 ">
-                            <p>
-                                No dolores referrentur eos, te vis mutat aperiri incorrupte, has eligendi probatus eu. Ius no decore deserunt. Duo case voluptatum ullamcorper ea, labores dolorem usu ea, quo semper menandri salutatus id. Nec quis nostrud pertinax ut, causae postulant eum ex.
-                            </p>
-                        </div>
-                        <div class="col-5 bg-dark text-light">
-                            <p>
-                                Id sea saepe persequeris, id has graece veritus, aeterno epicurei intellegebat ex nam. Eu vivendo disputando eam, erat elitr bonorum nam eu. Lobortis scripserit consectetuer mea ea. Mei delenit lucilius an. Illud atqui suscipiantur no mel.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-              
-            </section>
+        <div id="porfolio" class="container">
 
             <section id="realizacje" class="bg-dark text-light">
                 <div class="container py-5">
@@ -119,19 +88,6 @@
                         </div>
                     </div>  
                 </div>                           
-            </section>
-
-            <section id="kontakt">
-                <div class="container py-5">
-                    <div class="row">
-                        <h3 class="text-center py-3">Kontakt</h3>
-                    </div>
-                    <div class="row">
-                        <p>
-                            Solum iisque consectetuer nam in. Virtute diceret instructior ne vix. Vim ea eirmod nonumes theophrastus, viderer officiis eu sea. Dicam feugiat graecis eam te, cu novum tempor bonorum nec.
-                        </p>
-                    </div> 
-                </div>                       
             </section>
 
         </div>
