--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link" href="./index.html#oferta">OFERTA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./portfolio.html">REALIZACJE</a>
+                                <a class="nav-link" href="./index.html#realizacje">REALIZACJE</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="./index.html#kontakt">KONTAKT</a>
@@ -52,9 +52,36 @@
 
         <div id="home">
 
-            <section class="container-fluid p-0">
-                <img src="./images/background.jpg" alt="rezba" class="img-fluid">             
-            </section>
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="./images/background1.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/background2.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./images/background3.jpg" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             <section id="oferta" >
                 <div class="container py-5">
@@ -63,16 +90,16 @@
                             Lorem ipsum dolor sit amet, id mazim accumsan sea, pri elaboraret ullamcorper ex, stet utinam mel et. Te alii iisque nec, ea adolescens sadipscing has. Lorem choro tation has eu, virtute patrioque in pri. Detracto omittantur te sed, sed cu lorem assum tibique, at facer falli timeam qui. Gubergren consetetur id ius, tempor voluptatum ad pri. Timeam singulis salutandi mei cu, eu purto blandit voluptatibus has.
                         </p>
                     </div>
-                    <div class="row bg-dark text-light justify-content-center">
-                        <h3 class="col-10 text-center py-3">Oferta</h3>                        
+                    <div class="row bg-dark text-white-50 justify-content-center">
+                        <h3 class="col-10 text-center py-3">OFERTA</h3>                        
                     </div>
-                    <div class="row bg-dark text-light justify-content-center">
+                    <div class="row bg-dark text-white-50 justify-content-center">
                         <div class="col-5 ">
                             <p>
                                 No dolores referrentur eos, te vis mutat aperiri incorrupte, has eligendi probatus eu. Ius no decore deserunt. Duo case voluptatum ullamcorper ea, labores dolorem usu ea, quo semper menandri salutatus id. Nec quis nostrud pertinax ut, causae postulant eum ex.
                             </p>
                         </div>
-                        <div class="col-5 bg-dark text-light">
+                        <div class="col-5 bg-dark text-white-50">
                             <p>
                                 Id sea saepe persequeris, id has graece veritus, aeterno epicurei intellegebat ex nam. Eu vivendo disputando eam, erat elitr bonorum nam eu. Lobortis scripserit consectetuer mea ea. Mei delenit lucilius an. Illud atqui suscipiantur no mel.
                             </p>
@@ -82,10 +109,10 @@
               
             </section>
 
-            <section id="realizacje" class="bg-dark text-light">
+            <section id="realizacje" class="bg-dark text-white-50">
                 <div class="container py-5">
                     <div class="row">
-                        <h3 class="text-center py-3">Nasze realizacje</h3>
+                        <h3 class="text-center py-3">REALIZACJE</h3>
                     </div>
     
                     <div class="row pictures-container">
@@ -117,14 +144,17 @@
                                     </div>
                             </div>
                         </div>
-                    </div>  
+                    </div>
+                    <div class="row justify-content-center">
+                        <a class="text-white-50" href="./portfolio.html">Zobacz wszystkie...</a>
+                    </div>
                 </div>                           
             </section>
 
             <section id="kontakt">
                 <div class="container py-5">
                     <div class="row">
-                        <h3 class="text-center py-3">Kontakt</h3>
+                        <h3 class="text-center py-3">KONTAKT</h3>
                     </div>
                     <div class="row">
                         <p>
