--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                 <img class="img-responsive img-fluid" src="./images/rezba.jpg" alt="rezba">
                                     <div class="overlay">
                                         <h2></h2>
-                                        <a class="info lead" href="#">RZEŹBY</a>
+                                        <p class="info">RZEŹBY</p>
                                     </div>
                             </div>
                         </div>
@@ -131,7 +131,7 @@
                                 <img class="img-responsive img-fluid" src="./images/architektura.jpg" alt="architektura">
                                     <div class="overlay">
                                         <h2></h2>
-                                        <a class="info lead" href="#">ARCHITEKTURA</a>
+                                        <p class="info">ARCHITEKTURA</p>
                                     </div>
                             </div>
                         </div>
@@ -140,7 +140,7 @@
                                 <img class="img-responsive img-fluid" src="./images/nagrobek.jpg" alt="nagrobek">
                                     <div class="overlay">
                                         <h2></h2>
-                                        <a class="info lead" href="#">NAGROBKI</a>
+                                        <p class="info">NAGROBKI</p>
                                     </div>
                             </div>
                         </div>
