get parameter url

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="col-4">
                             <div class="hovereffect">
                                 <img class="img-responsive img-fluid" src="./images/rezba.jpg" alt="rezba">
-                                    <div class="overlay">
+                                    <div data-filter="sculptures" class="overlay">
                                         <h2></h2>
                                         <p class="info">RZEŹBY</p>
                                     </div>
@@ -129,7 +129,7 @@
                         <div class="col-4">
                             <div class="hovereffect">
                                 <img class="img-responsive img-fluid" src="./images/architektura.jpg" alt="architektura">
-                                    <div class="overlay">
+                                    <div data-filter="architecture" class="overlay">
                                         <h2></h2>
                                         <p class="info">ARCHITEKTURA</p>
                                     </div>
@@ -138,7 +138,7 @@
                         <div class="col-4">
                             <div class="hovereffect">
                                 <img class="img-responsive img-fluid" src="./images/nagrobek.jpg" alt="nagrobek">
-                                    <div class="overlay">
+                                    <div  data-filter="tombs" class="overlay">
                                         <h2></h2>
                                         <p class="info">NAGROBKI</p>
                                     </div>
@@ -167,6 +167,8 @@
         </div>
      
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+        <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
         <script src="./js/script.js"></script>
     </body>
 </html>
