--- a/portfolio.html
+++ b/portfolio.html
@@ -58,10 +58,10 @@
                     </div> 
                     <div class="row">
                         <div class="filtering col-sm-12 text-center">
-                            <span data-filter="*" class="active mx-2">wszystkie</span>
-                            <span data-filter=".architecture" class="mx-2">rzeźby</span>
-                            <span data-filter=".decor" class="mx-2">architektura</span>
-                            <span data-filter=".interior" class="mx-2">nagrobki</span>
+                            <span data-filter="*" class="mx-2">wszystkie</span>
+                            <span data-filter=".sculptures" class="mx-2">rzeźby</span>
+                            <span data-filter=".architecture" class="mx-2">architektura</span>
+                            <span data-filter=".tombs" class="mx-2">nagrobki</span>
                         </div>
                     </div>
                 </div>                                     
@@ -70,7 +70,7 @@
                     <div class="row">
                         <div class="col-12 text-center w-100">
                             <div class="row gallery">
-                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 interior">
+                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 sculptures">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
                                             <img src="./images/rezba-square.jpg" alt="..." />
@@ -86,7 +86,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 decor interior">
+                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 decor sculptures">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
                                             <img src="./images/rezba-square.jpg" alt="..." />
@@ -118,7 +118,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 mb-lg-0 interior">
+                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 mb-lg-0 tombs">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
                                             <img src="./images/nagrobek-square.jpg" alt="..." />
@@ -150,7 +150,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 decor">
+                                <div class="col-sm-6 col-md-4 col-lg-3 p-2 tombs">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
                                             <img src="./images/nagrobek-square.jpg" alt="..." />
