--- a/portfolio.html
+++ b/portfolio.html
@@ -21,26 +21,27 @@
     <body  class="bg-dark text-light">
 
         <header>
-            <nav class="navbar navbar-expand-sm fixed-top navbar-dark bg-dark">
-                
-                <div class="container">
-                    <a class="nav-brand" href="./index.html">
-                        <img src="./images/logo.png" alt="logo" class="d-inline-block align-top">
-                    </a>
+            <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
 
-                    <div class="collapse navbar-collapse" id="navbarCollapse">
-                        <ul class="nav navbar-nav mr-auto">                 
+                <div class="container">
+                    <a class="nav-brand brand nav-item navbar-text" href="./index.html">
+                        Font-Art Damian Pisarski
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                <div class="container justify-content-center">
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="nav navbar-nav flex-column flex-sm-row d-flex">                 
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html">HOME</a>
+                                <a class="nav-link mx-md-3 mx-sm-1 text-center" href="./index.html#oferta">OFERTA</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./index.html#oferta">OFERTA</a>
+                                <a class="nav-link mx-md-3 mx-sm-1 text-center active" href="./portfolio.html">REALIZACJE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="./portfolio.html">REALIZACJE</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="./index.html#kontakt">KONTAKT</a>
+                                <a class="nav-link mx-md-3 mx-sm-1 text-center" href="./index.html#kontakt">KONTAKT</a>
                             </li>                                    
                         </ul>
                     </div>
@@ -54,7 +55,7 @@
             <section id="realizacje">
                 <div class="container py-5 text-white-50">
                     <div class="row">
-                        <h3 class="text-center pt-3">REALIZACJE</h3>
+                        <h3 class="text-center pt-5">REALIZACJE</h3>
                     </div> 
                     <div class="row">
                         <div class="filtering col-sm-12 text-center">
@@ -66,7 +67,7 @@
                     </div>
                 </div>                                     
                 
-                <div class="container">
+                <div class="container home">
                     <div class="row">
                         <div class="col-12 text-center w-100">
                             <div class="row gallery">
