--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </nav>
         </header>
 
-        <div id="carouselExampleCaptions" class="carousel slide pt-5 " data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide pt-5 " data-bs-ride="carousel" data-bs-pause="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -61,21 +61,21 @@
                     <img src="./images/background1.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <p class="text-center">Some representative placeholder content for the first slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
                     <img src="./images/background2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block" >
                         <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <p class="text-center">Some representative placeholder content for the second slide.</p>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
                     <img src="./images/background3.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <p class="text-center">Some representative placeholder content for the third slide.</p>
                     </div>
                 </div>
             </div>
