--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
     </head>
 
-    <body  class="bg-dark text-light">
+    <body  class="bg-dark text-light" style="min-height: 100vh;">
 
         <header>
             <nav class="navbar navbar-expand-md fixed-top navbar-dark bg-dark">
@@ -50,7 +50,7 @@
             </nav>
         </header>
 
-        <div id="porfolio">
+        <div id="portfolio">
 
             <section id="realizacje">
                 <div class="container py-5 text-white-50">
@@ -67,7 +67,7 @@
                     </div>
                 </div>                                     
                 
-                <div class="container home">
+                <div class="container">
                     <div class="row">
                         <div class="col-12 text-center w-100">
                             <div class="row gallery">
@@ -176,6 +176,12 @@
             </section>
 
         </div>
+
+        <footer class="footer sticky-bottom mt-auto py-3 text-white-50">
+            <div class="container">
+                <p class="text-end"> Damian Pisarski - nr telefonu e-mail coś tam </p>
+            </div>
+        </footer>
      
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
