hover effects on mobile

--- a/index.html
+++ b/index.html
@@ -118,30 +118,30 @@
                     <div class="row pictures-container justify-content-center">
                         <div class="col-md-4 col-12 my-2 portfolio-home">
                             <div class="hovereffect">
-                                <img class="img-responsive img-fluid" src="./images/rezba.jpg" alt="rezba">
+                                <img class="img-responsive img-fluid imgMobileNone" src="./images/rezba.jpg" alt="rezba">
                                     <div data-filter="sculptures" class="overlay">
-                                        <h2></h2>
-                                        <p class="info">RZEŹBY</p>
+                                        <h2 class="h2MobileNone"></h2>
+                                        <p class="info pMobileNone">RZEŹBY</p>
                                     </div>
                             </div>
                         </div>
 
                         <div class="col-md-4 col-12 my-2 portfolio-home">
                             <div class="hovereffect ">
-                                <img class="img-responsive img-fluid" src="./images/architektura.jpg" alt="architektura">
+                                <img class="img-responsive img-fluid imgMobileNone" src="./images/architektura.jpg" alt="architektura">
                                     <div data-filter="architecture" class="overlay">
-                                        <h2></h2>
-                                        <p class="info">ARCHITEKTURA</p>
+                                        <h2 class="h2MobileNone"></h2>
+                                        <p class="info pMobileNone">ARCHITEKTURA</p>
                                     </div>
                             </div>
                         </div>
 
                         <div class="col-md-4 col-12 my-2 portfolio-home">
                             <div class="hovereffect">
-                                <img class="img-responsive img-fluid" src="./images/nagrobek.jpg" alt="nagrobek">
+                                <img class="img-responsive img-fluid imgMobileNone" src="./images/nagrobek.jpg" alt="nagrobek">
                                     <div  data-filter="tombs" class="overlay">
-                                        <h2></h2>
-                                        <p class="info">NAGROBKI</p>
+                                        <h2 class="h2MobileNone"></h2>
+                                        <p class="info pMobileNone">NAGROBKI</p>
                                     </div>
                             </div>
                         </div>
