--- a/portfolio.html
+++ b/portfolio.html
@@ -74,13 +74,10 @@
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 sculptures">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
-                                            <img src="./images/rezba-square.jpg" alt="..." />
+                                            <img class="imgPMobileNone" src="./images/rezba-square.jpg" alt="..." />
                                         </div>
-                                        <div class="portfolio-overlay">
-                                            <div class="portfolio-content">
-                                                <a class="popimg ml-0" href="#">
-                                                    <i class="ti-zoom-in display-24 display-md-23 display-lg-22 display-xl-20"></i>
-                                                </a>
+                                        <div class="portfolio-overlay overlayMobileNone">
+                                            <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
@@ -90,13 +87,10 @@
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 decor sculptures">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
-                                            <img src="./images/rezba-square.jpg" alt="..." />
+                                            <img class="imgPMobileNone"  src="./images/rezba-square.jpg" alt="..." />
                                         </div>
-                                        <div class="portfolio-overlay">
-                                            <div class="portfolio-content">
-                                                <a class="popimg ml-0" href="#">
-                                                    <i class="ti-zoom-in display-24 display-md-23 display-lg-22 display-xl-20"></i>
-                                                </a>
+                                        <div class="portfolio-overlay overlayMobileNone">
+                                            <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
@@ -106,13 +100,10 @@
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 architecture">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
-                                            <img src="./images/architektura-square.jpg" alt="..." />
+                                            <img class="imgPMobileNone" src="./images/architektura-square.jpg" alt="..." />
                                         </div>
-                                        <div class="portfolio-overlay">
-                                            <div class="portfolio-content">
-                                                <a class="popimg ml-0" href="#">
-                                                    <i class="ti-zoom-in display-24 display-md-23 display-lg-22 display-xl-20"></i>
-                                                </a>
+                                        <div class="portfolio-overlay overlayMobileNone">
+                                            <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
@@ -122,13 +113,10 @@
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 mb-lg-0 tombs">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
-                                            <img src="./images/nagrobek-square.jpg" alt="..." />
+                                            <img class="imgPMobileNone" src="./images/nagrobek-square.jpg" alt="..." />
                                         </div>
-                                        <div class="portfolio-overlay">
-                                            <div class="portfolio-content">
-                                                <a class="popimg ml-0" href="#">
-                                                    <i class="ti-zoom-in display-24 display-md-23 display-lg-22 display-xl-20"></i>
-                                                </a>
+                                        <div class="portfolio-overlay overlayMobileNone">
+                                            <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
@@ -138,13 +126,10 @@
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 mb-sm-0 architecture">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
-                                            <img src="./images/architektura-square.jpg" alt="..." />
+                                            <img class="imgPMobileNone" src="./images/architektura-square.jpg" alt="..." />
                                         </div>
-                                        <div class="portfolio-overlay">
-                                            <div class="portfolio-content">
-                                                <a class="popimg ml-0" href="#">
-                                                    <i class="ti-zoom-in display-24 display-md-23 display-lg-22 display-xl-20"></i>
-                                                </a>
+                                        <div class="portfolio-overlay overlayMobileNone">
+                                            <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
@@ -154,13 +139,10 @@
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 tombs">
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
-                                            <img src="./images/nagrobek-square.jpg" alt="..." />
+                                            <img class="imgPMobileNone" src="./images/nagrobek-square.jpg" alt="..." />
                                         </div>
-                                        <div class="portfolio-overlay">
-                                            <div class="portfolio-content">
-                                                <a class="popimg ml-0" href="#">
-                                                    <i class="ti-zoom-in display-24 display-md-23 display-lg-22 display-xl-20"></i>
-                                                </a>
+                                        <div class="portfolio-overlay overlayMobileNone">
+                                            <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
@@ -186,7 +168,6 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
         <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
-        <script src="./js/script.js"></script>
         <script src="./js/portfolio.js"></script>
     </body>
 </html>
