--- a/portfolio.html
+++ b/portfolio.html
@@ -84,27 +84,28 @@
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
+                                        </div>
                                         </a>
                                         <a href="./images/architektura-square.jpg" class="fresco" data-fresco-caption="Opis projektu 1" data-fresco-group="projekt1" data-fresco-group-options="thumbnails: 'horizontal'" data-fresco-group-options="ui: 'outside'"></a>
                                         <a href="./images/nagrobek-square.jpg" class="fresco" data-fresco-caption="Opis projektu 1" data-fresco-group="projekt1" data-fresco-group-options="thumbnails: 'horizontal'" data-fresco-group-options="ui: 'outside'"></a>
-
                                     </div>
                                 </div>
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 sculptures">
-                                    <a href="./images/rezba-square.jpg" class="fresco" data-fresco-caption="Caption below the image">
 
                                     <div class="portfolio-wrapper">
                                         <div class="portfolio-image">
                                             <img class="imgPMobileNone"  src="./images/rezba-square.jpg" alt="..." />
                                         </div>
+                                        <a href="./images/rezba-square.jpg" class="fresco" data-fresco-caption="Caption below the image">
                                         <div class="portfolio-overlay overlayMobileNone">
                                             <div class="portfolio-content contentMobileNone">
                                                 <h4>Opis projektu</h4>
                                                 <p>[opis]</p>
                                             </div>
                                         </div>
+                                        </a>
                                     </div>
-                                </a>
+                                    
                                 </div>
                                 
                                 <div class="col-sm-6 col-md-4 col-lg-3 p-2 architecture">
